done with pagination and sorting